[tool.poetry]
name = "one-more-project-14-1"
version = "0.1.0"
description = ""
authors = ["Alexandr Savitsky <savitsky.alexandr@mail.ru>"]
readme = "README.md"
packages = [{include = "one_more_project_14"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
